Alterando aparencia do input, e arquivo manifest para comecar a funcionar no google chrome

--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="style.css/original_page.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="inputs">
+            <input type="text" class="track" placeholder="Type your track code here">
+            <button class="track-btn"><i class="fa-solid fa-magnifying-glass fa-2xs" style="color: #000000;"></i></button>
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/9b6ce3bd8f.js" crossorigin="anonymous"></script>
 </body>
 </html>
