terminando as mudancas visuais iniciais

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="inputs">
             <input type="text" class="track" placeholder="Type your track code here">
-            <button class="track-btn"><i class="fa-solid fa-magnifying-glass fa-2xs" style="color: #000000;"></i></button>
+            <button class="track-btn"><img src="assets/icon-lupa.png" alt="lupa-img"></button>
         </div>
     </div>
 
