fetch da api link & track, email solicitado pedindo usuario e token para uso da api

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         </div>
     </div>
 
-    <script src="https://kit.fontawesome.com/9b6ce3bd8f.js" crossorigin="anonymous"></script>
+    <script src="script/index.js"></script>
 </body>
 </html>
