--- a/index.html
+++ b/index.html
@@ -11,6 +11,54 @@
             <input type="text" class="track" placeholder="Type your track code here">
             <button class="track-btn"><img src="assets/icon-lupa.png" alt="lupa-img"></button>
         </div>
+
+        
+        <div class="resultado">
+            <table>
+                <tbody>
+                    <tr class="r r0">
+                        <td class="resultado-trackD0">A</td>
+                        <td class="resultado-trackS0">A</td>
+                    </tr>
+                    <tr class="r r1">
+                        <td class="resultado-trackD1">A</td>
+                        <td class="resultado-trackS1">A</td>
+                    </tr>
+                    <tr class="r r2">
+                        <td class="resultado-trackD2">A</td>
+                        <td class="resultado-trackS2">A</td>
+                    </tr>
+                    <tr class="r r3">
+                        <td class="resultado-trackD3">A</td>
+                        <td class="resultado-trackS3">A</td>
+                    </tr>
+                    <tr class="r r4">
+                        <td class="resultado-trackD4">A</td>
+                        <td class="resultado-trackS4">A</td>
+                    </tr>
+                    <tr class="r r5">
+                        <td class="resultado-trackD5">A</td>
+                        <td class="resultado-trackS5">A</td>
+                    </tr>
+                    <tr class="r r6">
+                        <td class="resultado-trackD6">A</td>
+                        <td class="resultado-trackS6">A</td>
+                    </tr>
+                    <tr class="r r7">
+                        <td class="resultado-trackD7">A</td>
+                        <td class="resultado-trackS7">A</td>
+                    </tr>
+                    <tr class="r r8">
+                        <td class="resultado-trackD8">A</td>
+                        <td class="resultado-trackS8">A</td>
+                    </tr>
+                    <tr class="r r9">
+                        <td class="resultado-trackD9">A</td>
+                        <td class="resultado-trackS9">A</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <script src="script/index.js"></script>
