Mais espacos para rastreio, modificacao do layout, agora mostra horario

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="style.css/original_page.css">
+    <link rel="stylesheet" href="style.css/style.css">
 </head>
 <body>
     <div class="container">
         <div class="inputs">
             <input type="text" class="track" placeholder="Type your track code here">
-            <button class="track-btn"><img src="assets/icon-lupa.png" alt="lupa-img"></button>
+            <button class="track-btn"><img src="assets/pesquisar.png" alt="lupa-img"></button>
         </div>
 
         
@@ -17,44 +17,109 @@
             <table>
                 <tbody>
                     <tr class="r r0">
+                        <td class="resultado-trackH0">A</td>
                         <td class="resultado-trackD0">A</td>
                         <td class="resultado-trackS0">A</td>
                     </tr>
                     <tr class="r r1">
+                        <td class="resultado-trackH1">A</td>
                         <td class="resultado-trackD1">A</td>
                         <td class="resultado-trackS1">A</td>
                     </tr>
                     <tr class="r r2">
+                        <td class="resultado-trackH2">A</td>
                         <td class="resultado-trackD2">A</td>
                         <td class="resultado-trackS2">A</td>
                     </tr>
                     <tr class="r r3">
+                        <td class="resultado-trackH3">A</td>
                         <td class="resultado-trackD3">A</td>
                         <td class="resultado-trackS3">A</td>
                     </tr>
                     <tr class="r r4">
+                        <td class="resultado-trackH4">A</td>
                         <td class="resultado-trackD4">A</td>
                         <td class="resultado-trackS4">A</td>
                     </tr>
                     <tr class="r r5">
+                        <td class="resultado-trackH5">A</td>
                         <td class="resultado-trackD5">A</td>
                         <td class="resultado-trackS5">A</td>
                     </tr>
                     <tr class="r r6">
+                        <td class="resultado-trackH6">A</td>
                         <td class="resultado-trackD6">A</td>
                         <td class="resultado-trackS6">A</td>
                     </tr>
                     <tr class="r r7">
+                        <td class="resultado-trackH7">A</td>
                         <td class="resultado-trackD7">A</td>
                         <td class="resultado-trackS7">A</td>
                     </tr>
                     <tr class="r r8">
+                        <td class="resultado-trackH8">A</td>
                         <td class="resultado-trackD8">A</td>
                         <td class="resultado-trackS8">A</td>
                     </tr>
                     <tr class="r r9">
+                        <td class="resultado-trackH9">A</td>
                         <td class="resultado-trackD9">A</td>
                         <td class="resultado-trackS9">A</td>
+                    </tr>
+                    <tr class="r r10">
+                        <td class="resultado-trackH10">A</td>
+                        <td class="resultado-trackD10">A</td>
+                        <td class="resultado-trackS10">A</td>
+                    </tr>
+                    <tr class="r r11">
+                        <td class="resultado-trackH11">A</td>
+                        <td class="resultado-trackD11">A</td>
+                        <td class="resultado-trackS11">A</td>
+                    </tr>
+                    <tr class="r r12">
+                        <td class="resultado-trackH12">A</td>
+                        <td class="resultado-trackD12">A</td>
+                        <td class="resultado-trackS12">A</td>
+                    </tr>
+                    <tr class="r r13">
+                        <td class="resultado-trackH13">A</td>
+                        <td class="resultado-trackD13">A</td>
+                        <td class="resultado-trackS13">A</td>
+                    </tr>
+                    <tr class="r r14">
+                        <td class="resultado-trackH14">A</td>
+                        <td class="resultado-trackD14">A</td>
+                        <td class="resultado-trackS14">A</td>
+                    </tr>
+                    <tr class="r r15">
+                        <td class="resultado-trackH15">A</td>
+                        <td class="resultado-trackD15">A</td>
+                        <td class="resultado-trackS15">A</td>
+                    </tr>
+                    <tr class="r r16">
+                        <td class="resultado-trackH16">A</td>
+                        <td class="resultado-trackD16">A</td>
+                        <td class="resultado-trackS16">A</td>
+                    </tr>
+                    <tr class="r r17">
+                        <td class="resultado-trackH17">A</td>
+                        <td class="resultado-trackD17">A</td>
+                        <td class="resultado-trackS17">A</td>
+                    </tr>
+                    <tr class="r r18">
+                        <td class="resultado-trackH18">A</td>
+                        <td class="resultado-trackD18">A</td>
+                        <td class="resultado-trackS18">A</td>
+                    </tr>
+                    <tr class="r r19">
+                        <td class="resultado-trackH19">A</td>
+                        <td class="resultado-trackD19">A</td>
+                        <td class="resultado-trackS19">A</td>
+                    </tr>
+                    <tr class="r r20">
+                        <td class="resultado-trackH20">A</td>
+                        <td class="resultado-trackD20">A</td>
+                        <td class="resultado-trackS20">A</td>
                     </tr>
                 </tbody>
             </table>
